deployment/5-gateway/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-angular-gateway
  labels:
    app.kubernetes.io/name: spring-angular-gateway
    app.kubernetes.io/component: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
